stop overflowing to the right

--- a/css/main.css
+++ b/css/main.css
@@ -73,6 +73,7 @@ header{
     #BB0A21 31px);
   height: 100vh;
   max-width: 100%;
+  overflow: hidden;
 }
 .core-nav{
   background-color: rgba(0, 0, 0, 0.8);
